<resources>
    <string name="app_name">MSKP</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_dapri">Data Pribadi</string>
    <string name="nav_item_dajar">Data Jaringan</string>
    <string name="nav_item_dabon">Data Bonus</string>
    <string name="nav_item_account">Account</string>
    <string name="nav_item_logout">Logout</string>



    <string name="button_login">Masuk akun</string>
    <string name="title_home">Home</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_location">Lokasi</string>
    <string name="title_provider">Peyedia</string>
    <string name="title_schedule">Jadwal</string>
    <string name="title_training">Training</string>
    <string name="Tag_Description">Deskripsi</string>
    <string name="category">Bisnis / Kewirausahaan syalalalala</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Daftar sekarang</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_trainingdetail">Informasi Training</string>
    <string name="title_MapActivity">Lokasi Training</string>
    <string name="title_CheckoutActivity">Informasi Pendaftaran Training</string>
    <string name="btn_insertRegister">Daftar</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="title_ProfilUser">Profil User</string>
    <string name="uploadBukti">Konfirmasi</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="title_DetailRegistrasi">Detail Registrasi</string>
    <string name="title_UploadImageActivity">Unggah Bukti Transfer</string>
    <string name="title_comment_training">Komentar</string>
    <string name="type_comment">Ketik komentar</string>
    <string name="action_refresh">refresh</string>
    <string name="action_notif">Notifikasi</string>
    <string name="nav_item_postingan">Berita</string>
    <string name="nav_item_Bantuan">Bantuan</string>
    <string name="nav_item_pesanmasuk">Pesan Masuk</string>
    <string name="nav_item_user">Akun</string>
    <string name="title_post">Postingan</string>
    <string name="title_memberregistration">Daftar Member</string>
    <string name="nav_item_register">Daftar</string>
    <string name="title_post_detail">Detail Postingan</string>
    <string name="title_instructor">Daftar Pemateri</string>
    <string name="title_schedulee">Jadwal Training</string>
    <string name="title_memberregistration2">Unggah Foto Profil</string>
    <string name="title_comment_training_replay">Balasan Komentar</string>
    <string name="title_Message">Pesan</string>
    <string name="title_Help">Bantuan</string>



    <string-array name="nav_drawer_labels_IsLoggedIn">

        <item>@string/nav_item_dapri</item>
        <item>@string/nav_item_dajar</item>
        <item>@string/nav_item_dabon</item>
        <item>@string/nav_item_account</item>
        <item>@string/nav_item_logout</item>

    </string-array>

    <string name="sex_prompt">Choose a country</string>
    <string name="title_DataPribadi">Data Pribadi</string>
    <string name="title_DataPenSponsoran">Data PenSponsoran</string>
    <string name="Edit_Profil">Edit Profil Pribadi</string>
    <string name="Edit_Password">Edit Password</string>
    <string name="Detail_Pensponsoran">Detail Pensponsoran</string>

    <string-array name="sex_arrays">
        <item>Perempuan</item>
        <item>Laki-laki</item>
    </string-array>



</resources>
