<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/idmember"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/pad_50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_comment"
            android:hint="@string/hint_username"
            android:drawableRight="@drawable/ic_username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
             />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/pad_50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_comment"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_pwd"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/bg_button"

            android:text="@string/btn_login"
            android:textColor="@color/windowBackground" />

        <!-- Link to Login Screen -->

        <!--
        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />
            -->


    </LinearLayout>

</LinearLayout>